src/tests/golden/invalid_il/wrong_call_arity.il
il 0.1
extern @foo(i64) -> void
func @wrong_call() -> void {
entry:
  call @foo()
  ret
}
